Fix carousel clone visibility

--- a/styles.css
+++ b/styles.css
@@ -508,10 +508,6 @@ img {
   opacity: 0.72;
 }
 
-.carousel.is-enhanced .carousel-slide.is-clone {
-  visibility: hidden;
-}
-
 .carousel.is-enhanced .carousel-controls {
   display: flex;
 }
